# Alien-Dog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp
specification/: specification_prototype.py
